...
    android:id="@+id/login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".autenticazione.view.Login">

    <Button
        android:id="@+id/loginButton"
        android:layout_width="180dp"
        android:layout_height="70dp"
        android:layout_marginStart="158dp"
        android:layout_marginTop="66dp"
        android:layout_marginEnd="165dp"
        android:layout_marginBottom="53dp"
...
        android:textStyle="bold"
        app:cornerRadius="8dp"
        app:layout_constraintBottom_toTopOf="@+id/registerNow"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.456"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword2"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/editTextTextEmailAddress2"
        android:layout_width="250dp"
        android:layout_height="35dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="174dp"
        android:layout_marginEnd="101dp"
        android:layout_marginBottom="52dp"
...
