...
        android:layout_centerVertical="true"
        android:layout_marginStart="35dp"
        android:src="@drawable/logout_logo"
        android:contentDescription="@string/logout_icon" />

    <ImageView
        android:id="@+id/note_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:src="@drawable/note_logo"
        android:contentDescription="@string/main_page_icon" />


    <ImageView
        android:id="@+id/usr_opt_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"
        android:layout_marginEnd="35dp"
        android:src="@drawable/user_logo_black"
...
